# agarilog

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.rst  pyproject.toml  sample.py
src/agarilog/: __init__.py  log.py  settings.py
src/agarilog/handlers/: __init__.py  _helper.py  formatter.py
src/agarilog/handlers/web/: __init__.py  _helper.py  chatwork.py  request_backend.py  slack.py  telegram.py  web_handler.py
tests/: test_agarilog.py
