[tool.poetry]
name = "agarilog"
version = "0.2.0"
description = "simple logger for message services."
authors = ["agari"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/sakuv2/agarilog"
packages = [
    { include = "agarilog", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7.0"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}
pydantic = {extras = ["dotenv"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.800"
ipykernel = "^5.4.2"
tox = "^3.21.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
